UHG286 - Submit Feedback hidden behind PDF in iframe issue.
git-svn-id: https://drive.kana.com/SVN/UHG/IQ/KMRestAPI@3329 b552034e-f646-462b-9072-8d94b4fb3fa1

--- a/ContentServices/src/main/webapp/css/feedback.css
+++ b/ContentServices/src/main/webapp/css/feedback.css
@@ -26,6 +26,16 @@
 	padding: 0 0 0 6px;			
 }
 
+.cover {
+    border: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+}
+
 .feedback_body {
 	height: auto;
 }
